--- a/Learn_C_Programming_Language/HelloWorld/HelloWorld/HelloWorld.vcxproj
+++ b/Learn_C_Programming_Language/HelloWorld/HelloWorld/HelloWorld.vcxproj
@@ -19,7 +19,20 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\01_注释基本使用.c" />
+    <ClCompile Include="..\..\02_注释扩展知识点.c" />
+    <ClCompile Include="..\..\03_关键字.c" />
+    <ClCompile Include="..\..\04_常量.c" />
+    <ClCompile Include="..\..\05_实型常量细节补充.c" />
+    <ClCompile Include="..\..\06_输出常量.c" />
+    <ClCompile Include="07_输出常量的两个小扩展.c" />
     <ClCompile Include="HelloWorld.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="HelloWorld.rc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
@@ -27,6 +40,7 @@
     <ProjectGuid>{34c1710f-c69c-42a4-8fbd-03aae3afbdf6}</ProjectGuid>
     <RootNamespace>HelloWorld</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>core grammar</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
